--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
+    "draft-js": "^0.11.7",
     "lodash": "^4.17.19",
     "next": "^9.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^5.0.3",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-syntax-highlighter": "^15.4.3",
+    "remark-gfm": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
